--- a/03.01.03/Texto en linea/index.html
+++ b/03.01.03/Texto en linea/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Sin título. Escriba su nombre. Ejercicios. Páginas web HTML y hojas de estilo CSS. Bartolomé Sintes Marco. www.mclibre.org</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  Contra Comic Sans
+  <h1>Contra Comic Sans</h1>
 
   Origen
 
