--- a/Examen/peak-oil/peakoil.html
+++ b/Examen/peak-oil/peakoil.html
@@ -10,12 +10,12 @@
   <h1>El peak oil</h1>
 
   <nav>
-    <a href="#">Qué es</a><br><br>
-    <a href="#">Posturas</a><br><br>
-    <a href="#">El futuro</a>
+    <a href="#1">Qué es</a><br><br>
+    <a href="#2">Posturas</a><br><br>
+    <a href="#3">El futuro</a>
   </nav> 
   <section>
-    <h2>Qué es el peak oil</h2>
+    <a name="1"><h2>Qué es el peak oil</h2></a>
     <p> A mediados del siglo XX el geólogo <span class="nombre">Marion King Hubbert</span> estudió el comportamiento de los campos de petróleo y gas y observó que la producción seguía una curva en forma de campana. En <time>1956</time>, extrapolando los datos al conjunto de <abbr title="Estados Unidos">EEUU</abbr>, Hubbert predijo que la producción de petróleo en <abbr title="Estados Unidos">EEUU</abbr> también seguiría una curva similar, cuya cima se alcanzaría a finales de los 60. Efectivamente, ese pico se alcanzó a primeros de los 70 y desde entonces, la producción de petróleo de <abbr title="Estados Unidos">EEUU</abbr> no dejó de disminuir. Lo que no pudo predecir Hubbert es que, a partir de <time>2010</time>, la técnica del <em>fracking</em> fuera a permitir un aumento espectacular de la producción, aunque no sepamos cuánto durará ni si habrá valido la pena ya que los costes de producción son muy altos.</p>
 
     <img class="centrado" src="img/hubbert-curve-usa-mini.png" alt="Grafico en minuatura" width="400px" height="300px">
@@ -25,7 +25,7 @@
   <hr>
 
   <section class="mitad">
-    <h2>Posturas ante el peak oil</h2>
+    <a name="2"><h2>Posturas ante el peak oil</h2></a>
 
     <article>
       <h3>Los negacionistas</h3>
@@ -54,9 +54,9 @@
 
   <hr>
 
-  <section>
+  <section >
 
-    <h2>¿Quién acabará teniendo razón?</h2>
+  <a name="3"><h2>¿Quién acabará teniendo razón?</h2></a>
 
     <p>Los datos actuales parecen indicar que en <time>2005</time> se alcanzó efectivamente el máximo en la producción de petróleo convencional, que ha ido bajando lentamente desde entonces. Sin embargo, la producción total se ha mantenido más o menos constante gracias a otros tipos de combustibles, más caros y de peor calidad, especialmente el petróleo de fracking. Aún así, es posible que en <time>2018</time> se alcanzara el máximo en la producción de todo tipo de petróleos, aunque la pandemia de Covid ha alterado de tal manera las cifras de consumo de petróleo que es imposible decirlo ahora. No lo sabremos hasta dentro de unos años, si se confirma definitivamente el declive y este no se puede achacar a otros motivos temporales como conflictos en países productores o reducciones en la demanda por crisis económicas o sanitarias.</p>
 
