--- a/MyIES/index.html
+++ b/MyIES/index.html
@@ -4,7 +4,7 @@
         <title>Mi centro</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="stylesheets/screen.css">
+        <link rel="stylesheet" type="text/css" href="scss/css/screen.css">
     </head>
     <body>
         <!-- Header con el logo y el título de la web -->
