--- a/05.02. Actividad 1/index.html
+++ b/05.02. Actividad 1/index.html
@@ -17,11 +17,7 @@
 
         <div class="row">
 
-
-            <div class="col-12">
-                <div id="verde"></div>
-            </div>
-
+            <div class="verde col-lg-12 col-md-12"></div>
 
         </div>
 
@@ -29,43 +25,33 @@
 
         <div class="row">
 
+            <div class="rojo col-lg-2 col-md-2"></div>
 
-            <div class="col-2">
-                <div id="rojo"></div>
-            </div>
-
-
-            <div class="col-10">
+            <div class="col-lg-10 col-md-10">
 
                 <!--PRIMERA FILA-->
                 <div class="row">
-                    <div class="col-12">
-                        <div id="rosa"></div>
-                    </div>
+                    <div class="rosa col-lg-12 col-md-12"></div>
                 </div>
                 <!--SEGUNDA FILA-->
                 <div class="row">
-                    <div class="col-6">
-                        <div class="carne"></div>
-                    </div>
-                    <div class="col-6">
-                        <div class="carne"></div>
-                    </div>
+                    <div class="carne col-lg-6 col-md-12"></div>
+                    <div class="carne col-lg-6 col-md-12"></div>
                 </div>
                 <!--TERCERA FILA-->
                 <div class="row">
 
-                    <div class="col-2"><div class="azul"></div></div>
-                    <div class="col-2"><div class="azul"></div></div>
-                    <div class="col-4"><div class="azul"></div></div>
-                    <div class="col-2"><div class="azul"></div></div>
-                    <div class="col-2"><div class="azul"></div></div>
+                    <div class="azul col-lg-2 col-md-4"></div>
+                    <div class="azul col-lg-2 col-md-4"></div>
+                    <div class="azul col-lg-2 col-md-4"></div>
+                    <div class="azul col-lg-2 col-md-4"></div>
+                    <div class="azul col-lg-2 col-md-4"></div>
 
-                    <div class="col-2"><div class="azul"></div></div>
-                    <div class="col-2"><div class="azul"></div></div>
-                    <div class="col-4"><div class="azul"></div></div>
-                    <div class="col-2"><div class="azul"></div></div>
-                    <div class="col-2"><div class="azul"></div></div>
+                    <div class="azul col-lg-2 col-md-4"></div>
+                    <div class="azul col-lg-2 col-md-4"></div>
+                    <div class="azul col-lg-2 col-md-4"></div>
+                    <div class="azul col-lg-2 col-md-4"></div>
+                    <div class="azul col-lg-2 col-md-4"></div>
 
                 </div>
             </div>
@@ -76,7 +62,7 @@
         <!--TERCERA FILA-->
 
         <div class="row">
-            <div class="col-12">
+            <div class="col-lg-12">
                 <div id="verde-mini"></div>
             </div>
         </div>
