--- a/05.02. Actividad 1/index.html
+++ b/05.02. Actividad 1/index.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    
+
     <div id="container">
         <!--PRIMERA FILA-->
 
@@ -25,9 +25,9 @@
 
         <div class="row">
 
-            <div class="rojo col-lg-2 col-md-2"></div>
+            <div class="rojo col-lg-1 col-md-2"></div>
 
-            <div class="col-lg-10 col-md-10">
+            <div class="col-lg-11 col-md-10">
 
                 <!--PRIMERA FILA-->
                 <div class="row">
@@ -41,17 +41,17 @@
                 <!--TERCERA FILA-->
                 <div class="row">
 
-                    <div class="azul col-lg-2 col-md-4"></div>
-                    <div class="azul col-lg-2 col-md-4"></div>
-                    <div class="azul col-lg-2 col-md-4"></div>
-                    <div class="azul col-lg-2 col-md-4"></div>
-                    <div class="azul col-lg-2 col-md-4"></div>
+                    <div class="azul col-lg-2 col-md-4 col-6"></div>
+                    <div class="azul col-lg-2 col-md-4 col-6"></div>
+                    <div class="azul col-lg-4 col-md-4 col-6"></div>
+                    <div class="azul col-lg-2 col-md-4 col-6"></div>
+                    <div class="azul col-lg-2 col-md-4 col-6"></div>
 
-                    <div class="azul col-lg-2 col-md-4"></div>
-                    <div class="azul col-lg-2 col-md-4"></div>
-                    <div class="azul col-lg-2 col-md-4"></div>
-                    <div class="azul col-lg-2 col-md-4"></div>
-                    <div class="azul col-lg-2 col-md-4"></div>
+                    <div class="azul col-lg-2 col-md-4 col-6"></div>
+                    <div class="azul col-lg-2 col-md-4 col-6"></div>
+                    <div class="azul col-lg-4 col-md-4 col-6"></div>
+                    <div class="azul col-lg-2 col-md-4 col-6"></div>
+                    <div class="azul col-lg-2 col-md-4 col-6"></div>
 
                 </div>
             </div>
@@ -62,9 +62,7 @@
         <!--TERCERA FILA-->
 
         <div class="row">
-            <div class="col-lg-12">
-                <div id="verde-mini"></div>
-            </div>
+            <div class="verde-mini col-lg-12 col-md-12"></div>
         </div>
     </div>
 
